--- a/styles/skills.css
+++ b/styles/skills.css
@@ -18,3 +18,38 @@
   text-align: center;
   margin-bottom: 83px;
 }
+
+.skills__icons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.icon {
+  width: 167px;
+}
+
+.icon img {
+  display: block;
+  margin: 0 auto;
+}
+
+.icon p {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  margin: 24px auto 40px auto;
+  color: #828282;
+  min-height: 34px;
+  max-width: 79px;
+}
+
+.stars {
+  display: flex;
+  justify-content: space-between;
+}
+
+.stars img {
+  display: inline;
+  flex-direction: column;
+}
