--- a/styles/footer.css
+++ b/styles/footer.css
@@ -8,6 +8,7 @@
   font-size: 34px;
   line-height: 43px;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .contact__text {
@@ -16,8 +17,8 @@
   line-height: 22px;
   text-align: center;
   color: #070707;
-  white-space: pre-line;
-  height: 64px;
+  max-width: 275px;
+  margin: 0 auto 30px;
 }
 
 .contact__button {
@@ -30,24 +31,50 @@
   color: #fff;
   border-radius: 35px;
   padding: 12px 28px 12px 28px;
-  margin: 29px auto 86px;
+  margin: 0 auto 80px;
+  border: none;
 }
 
-.footer__icon{
+.contact__button:hover {
+  background: #c1b9b9;
+  color: #000;
+}
+
+.footer__icon {
   display: flex;
   justify-content: space-between;
   max-width: 342px;
   align-items: center;
-  margin: 0 auto;
+  margin: 0 auto 45px;
 }
 
+.footer__icon > a {
+  display: block;
+  transition: 0.3s;
+}
 
-.contact__footer{
-font-weight: 500;
-font-size: 14px;
-line-height: 17px;
-text-align: center;
-white-space: pre-line;
-color: #828282;
-align-self: flex-end;
+.footer__icon > a:hover {
+  transform: scale(1.2);
+  transition: 0.3s;
+}
+
+.contact__footer {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  white-space: pre-line;
+  color: #828282;
+  align-self: flex-end;
+}
+
+@media (max-width: 568px) {
+  #contact {
+    padding: 80px 0 90px 0;
+  }
+
+  .contact__button {
+    margin: 0 auto 48px;
+    width: 315px;
+  }
 }
