--- a/styles/home.css
+++ b/styles/home.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
+  align-items: flex-end;
 }
 
 .home_title > h1 {
@@ -20,9 +21,7 @@
   font-size: 18px;
   line-height: 22px;
   max-width: 156px;
-  align-self: flex-end;
-  margin-bottom: 20px;
-  /* word-wrap: break-word; */
+  margin-bottom: 7px;
 }
 
 .home__image > img {
@@ -45,9 +44,9 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 36px;
+    align-items: flex-start;
   }
   .home_title > p {
-    align-self: flex-start;
     margin-top: 23px;
     margin-bottom: 0;
   }
