--- a/styles/skills.css
+++ b/styles/skills.css
@@ -64,10 +64,15 @@
     column-gap: 65px;
   }
   .icon {
-    margin: 0 auto 40px;
+    margin: 0 auto 80px;
   }
-  .icon:last-child {
-    margin: 0 auto;
+
+  .icon_3 {
+    margin-bottom: 0;
+  }
+
+  .icon_4 {
+    margin-bottom: 0;
   }
 }
 
@@ -78,10 +83,24 @@
     max-width: 300px;
     align-items: center;
   }
+
   .icon {
     margin: 0 auto 80px;
   }
-  .icon:last-child {
-    margin: 0 auto;
+
+  .icon_4 {
+    margin-bottom: 0;
+  }
+
+  #skills {
+    padding: 83px 0 98px 0;
+  }
+
+  .skills__title {
+    margin-bottom: 50px;
+  }
+
+  .skills__text {
+    margin-bottom: 70px;
   }
 }
